# advent-of-code

./: .gitignore  README.md
2022/day10/src/: main.rs
2022/day3/src/: main.rs
2022/day4/src/: main.rs
2022/day5/src/: main.rs
2022/day8/src/: main.rs
2022/day9/src/: main.rs
2023/: Cargo.toml
2024/: Cargo.toml
2025/: Cargo.toml
day1/src/: main.rs
day10/src/: main.rs
day2/src/: main.rs
day4/src/: main.rs
day5/src/: main.rs
day6/src/: main.rs
day7/src/: main.rs
day8/src/: main.rs
day9/src/: main.rs
