[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
dead_code = "allow"
unused_variables = "allow"

[dependencies]
anyhow = "1.0.75"
indexmap = "2.1.0"
indoc = "2.0.4"
itertools = "0.12.0"
nom = "7.1.3"
